Consistency with project modules.

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -137,10 +137,10 @@
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
 			<li><a ui-sref="p.workinggroup.list">Working Group</a></li>
 			<li><a ui-sref="p.role.list">Project Roles</a></li>
-			<li><a ui-sref="p.projectcondition.list">Project Conditions</a></li>
+<!-- 			<li><a ui-sref="p.projectcondition.list">Project Conditions</a></li>
 			<li><a ui-sref="p.ir.list">Inspection Reports</a></li>
 			<li><a ui-sref="p.complaint.list">Complaints</a></li>
-			<li><a ui-sref="p.document.list">Documents</a></li>
+			<li><a ui-sref="p.document.list">Documents</a></li> -->
 		</ul>
 	</div>
 
