--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -23,7 +23,7 @@
 				</tr>
 				<tr ng-if="!$data || $data.length === 0">
 					<td colspan="5">
-						No Recent Activity records found.
+						No records found.
 					</td>
 				</tr>
 			</table>
