--- a/modules/project-complaints/client/views/complaint-edit.html
+++ b/modules/project-complaints/client/views/complaint-edit.html
@@ -1,71 +1,54 @@
-<h1 class="page-title">
-	Add/Edit Complaint
+<h1 class="page-title no-lower-margin">
+	Add / Edit Complaint
 </h1>
-<div class="block-content">
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="p.complaint.list">Cancel</a>
+		<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
+	</div>
+</div>
+
+<div class="panel panel-default">
 	<div class="panel-body">
 		<div class="row">
-			<div class="col-sm-9">
+
+			<div class="col-sm-8">
 				<div class="form-group">
-					<label for="title" class="control-label">Complaint Name</label>
-					<input id="title" type="text" class="form-control input-sm" ng-model="d.complaint.name">
+					<label for="complainant" class="control-label">Complainant</label>
+					<input id="complainant" ng-model='complaint.complainant' class="form-control input-sm" />
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-4">
 				<div class="form-group">
-					<label for="sector" class="control-label">Project Sector</label>
-					<select id="sector" ng-model='d.complaint.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
+					<label for="stage" class="control-label">Stage</label>
+					<select id="stage" ng-model='complaint.stage' class="form-control input-sm" ng-options="v as v for v in stages"></select>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-8">
 				<div class="form-group">
-					<label for="shortDesc" class="control-label">Complaint Description</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="d.complaint.description" rows=6></textarea>
+					<label for="complaint" class="control-label">Complaint Description</label>
+					<textarea id="complaint" type="text" class="form-control input-sm" ng-model="complaint.complaint" rows=10></textarea>
 				</div>
 			</div>
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="stage" class="control-label">Applicable Value Components</label>
+					<select-array x-source-array="d.vcs" x-selected-array='complaint.vcs'></select-array>
+				</div>
+			</div>			
 		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="d.complaint.reportRequirements" rows=6></textarea>
-				</div>
-			</div>
-		</div>
+		
+		<hr>
 
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="d.selectTopic(pillar)" id="pillar" ng-model='d.complaint.pillar' class="form-control input-sm" ng-options="pillar as pillar for pillar in d.pillars"></select>
-				</div>
-			</div>
-
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="stage" class="control-label">Project Stage</label>
-					<select id="stage" ng-model='d.complaint.stage' class="form-control input-sm" ng-options="stage as stage for stage in d.stages"></select>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="topics" class="control-label">Topics</label>
-					<select multiple id="topics" ng-model='d.complaint.topics' class="form-control input-sm">
-						<option ng-repeat="topic in d.topics" value="{{topic.code}}">{{topic.name}}</option>
-					</select>
-				</div>
-			</div>
-
+		<div class="text-right">
+			<a class="btn btn-default" ui-sref="p.complaint.list">Cancel</a>
+			<a class="btn btn-default" href ng-click="save()">Save</a>
 		</div>
 
 	</div>
-</div>
-<div>
-	<a class="btn btn-default" ui-sref="p.complaint.list">Cancel</a>
-	<a class="btn btn-primary" href ng-click="save()">Save</a>
 </div>
 
