--- a/modules/project-complaints/client/views/complaint-list.html
+++ b/modules/project-complaints/client/views/complaint-list.html
@@ -1,24 +1,31 @@
-<h1 class="page-title">
+<h1 class="page-title no-lower-margin">
 	Complaints for {{ project.name }}
 </h1>
 
 <div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="p.complaint.create()">+ Add New Complaint</a>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-sm-12">
-		<a class="btn btn-default btn-sm"  ui-sref="o.complaint.create()"><i class="glyphicon glyphicon-plus"></i> Add New Complaint</a>
 		<section class="panel panel-default">
-			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-bordered table-striped">
-			    <tr ng-repeat="o in $data" ui-sref="o.complaint.detail({complaintId:o._id})">
-			        <td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
-					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-					<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-			        <td title="">
-			        	<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
-			        	<i class="glyphicon glyphicon-pencil"></i>
-			        	</a>
-			        </td>
+			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
+			    <tr ng-repeat="o in $data" ui-sref="p.complaint.detail({complaintId:o._id})">
+					<td data-title="'Complainant'"	title:'Complainant'		filter="{'complainant':'text'}"	sortable="'complainant'"    >{{o.complainant}}</td>
+					<td data-title="'Stage'"			title:'Stage'			filter="{'stage':'select'}"		sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
+					<td widht="1%" class="text-right">
+			        		<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
+							<i class="glyphicon glyphicon-pencil"></i>
+			        		</a>
+					</td>
 			    </tr>
+				<tr ng-if="!$data || $data.length === 0">
+					<td colspan="5">
+						No records found.
+					</td>
+				</tr>			    
 			</table>
 		</section>
 	</div>
