--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -490,6 +490,11 @@ th .progress-bar {
 .control-with-label {
 	margin-top: 25px !important;
 }
+
+.top-nav-lower-margin {
+	margin-bottom: 5px;
+}
+
 // -------------------------
 // PANELS...
 // -------------------------
