--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -8,6 +8,6 @@
 </section>
 <section class="panel panel-default" ng-show="!recentActs || recentActs.length === 0">
 	<div class='panel-body'>
-		<h3>No Recent Activity to Report</h3>
+		<h3 class="no-lower-margin">No Recent Activity to Report</h3>
 	</div>
 </section>
