--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -1,24 +1,34 @@
-<h1 class="page-title">
-	Valued Components for {{ project.name }}
+<h1 class="page-title no-lower-margin">
+	Value Components for {{ project.name }}
 </h1>
 
 <div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="p.vc.create()">+ Add New Value Component</a>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-sm-12">
-		<a class="btn btn-default btn-sm"  ui-sref="o.vc.create()"><i class="glyphicon glyphicon-plus"></i> Add New Valued Component</a>
 		<section class="panel panel-default">
-			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-bordered table-striped">
-			    <tr ng-repeat="o in $data" ui-sref="o.vc.detail({vcId:o._id})">
-			        <td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
+			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
+				<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
+					<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
 					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
 					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
 					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
 					<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-			        <td title="">
-			        	<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="p.vc.edit({vcId:o._id})">
-			        	<i class="glyphicon glyphicon-pencil"></i>
-			        	</a>
-			        </td>
-			    </tr>
+					<td width="1%" class="text-right">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.vc.edit({vcId:o._id})">
+							<i class="glyphicon glyphicon-pencil"></i>
+						</a>
+					</td>
+				</tr>
+				<tr ng-if="!$data || $data.length === 0">
+					<td colspan="6">
+						No records found.
+					</td>
+				</tr>			    
 			</table>
 		</section>
 	</div>
