--- a/modules/artifacts/client/views/partial.artifact-edit.html
+++ b/modules/artifacts/client/views/partial.artifact-edit.html
@@ -1,4 +1,4 @@
-<div class="panel-body" ng-if="artifact.isTemplate">
+<div ng-if="artifact.isTemplate">
 	<!--
 
 		This section gets displayed if the content is a template
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="panel-body" ng-if="!artifact.isTemplate">
+<div ng-if="!artifact.isTemplate">
 	<!--
 
 		This section gets displayed if the content is a document
