Recent activity links, project description page components

--- a/modules/project-documents/client/views/projectdocument-list.html
+++ b/modules/project-documents/client/views/projectdocument-list.html
@@ -44,5 +44,5 @@
 		class="anchor-section"
 		id="anchor-document-approvals"
 		x-project="project"
-		ng-if="('project'| shouldDisplayPanel:'doc-approvals':project.status) && environment === 'EAO'">
+		ng-if="('project'| shouldDisplayPanel:'doc-approvals':project.status)">
 	</tmpl-documents-approvals>
