--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -1,5 +1,5 @@
 <section class="panel panel-default" ng-repeat="activity in recentActs" ng-class="{'watermark-chat': activity.type === 'Public Comment Period', 'watermark-news': activity.type === 'News'}">
-	<div class='panel-body news-headline' ui-sref="p.detail({projectId: projectsLookup[activity.project].code })">
+	<div class='panel-body news-headline clickable' ui-sref="p.detail({projectid: projectlookup[activity.project].code })">
 		<h3>{{ activity.headline }}</h3>
 		<p><pre>{{ activity.content }}</pre></p>
 		<p class="small">{{ activity.dateAdded | date }}</p>
@@ -8,6 +8,6 @@
 </section>
 <section class="panel panel-default" ng-show="!recentActs || recentActs.length === 0">
 	<div class='panel-body'>
-		<h3 class="no-lower-margin">No Recent Activity to Report</h3>
+		<h3 class="no-lower-margin">No Recent Activity</h3>
 	</div>
 </section>
