--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1341,3 +1341,52 @@ table thead tr.ng-table-filters {
   background-color: #F2F2F2;
   color: #000;
 }
+
+.template .rTable {   	
+  display: table;   	
+  width: 100%; 
+  margin-top: 10px;
+  font-size: 11px;
+} 
+
+.template .rTableRow {   	
+  display: table-row; 
+} 
+ 
+.template .rTableCell{   	
+  display: table-cell;   	
+  padding: 5px;   	
+  border-right: 1px solid #000; 
+  border-top: 1px solid #000; 
+} 
+
+.template .rTableHead {   	
+  display: table-cell;   	
+  padding: 5px;   	
+  border-right: 1px solid #000; 
+  border-top: 1px solid #000; 
+  font-weight: bold;
+  text-align: center;
+  background-color: #D9D9D9;
+  vertical-align: middle;
+} 
+
+.template .rTableSubHead{   	
+  display: table-cell;   	
+  padding: 3px 10px; 
+  border-top: 1px solid #000; 
+  background-color: #F2F2F2;
+}
+
+.template .first-cell {
+  border-left: 1px solid #000; 
+}
+
+.template .last-cell {
+  border-right: 1px solid #000; 
+}
+
+.template .tbl-bottom {
+  border-top: 1px solid #000;
+  margin-bottom: 10px;
+}
