changed the textures to be full width

--- a/modules/artifacts/client/views/artifact-review.html
+++ b/modules/artifacts/client/views/artifact-review.html
@@ -8,8 +8,9 @@
 
 <div>
 	<h4>Review Note</h4>
-	<textarea ng-model="artifact.reviewnote"></textarea>
+	<textarea class="col-sm-12" ng-model="artifact.reviewnote"></textarea>
 </div>
+<div>&nbsp;</div>
 <div>
 	<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
 	<a class="btn btn-success" ng-click="reject()">Reject and return for {{buttons.prev}}</a>
