--- a/modules/artifacts/client/views/artifact-approve.html
+++ b/modules/artifacts/client/views/artifact-approve.html
@@ -8,8 +8,9 @@
 
 <div>
 	<h4>Approval / Rejection Note</h4>
-	<textarea ng-model="artifact.approvalnote"></textarea>
+	<textarea class="col-sm-12" ng-model="artifact.approvalnote"></textarea>
 </div>
+<div>&nbsp;</div>
 <div>
 	<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
 	<a class="btn btn-success" ng-click="reject()">Reject and return for {{buttons.prev}}</a>
