--- a/modules/users/client/views/user-partials/user-user.html
+++ b/modules/users/client/views/user-partials/user-user.html
@@ -3,13 +3,13 @@
     <div class="col-sm-6">
         <div class="form-group">
             <label for="contact" class="control-label">Contact Name</label>
-            <input id="contact" type="text" class="form-control input-sm" ng-model="uu.name">
+            <input id="contact" type="text" class="form-control input-sm" ng-model="uu.user.displayName">
         </div>
     </div>
     <div class="col-sm-6">
         <div class="form-group">
             <label for="contactTitle" class="control-label">Title</label>
-            <input id="contactTitle" type="text" class="form-control input-sm" ng-model="uu.title">
+            <input id="contactTitle" type="text" class="form-control input-sm" ng-model="uu.user.title">
         </div>
     </div>
 </div>
@@ -18,13 +18,13 @@
     <div class="col-sm-4">
         <div class="form-group">
             <label for="email" class="control-label">Email</label>
-            <input id="email" type="email" class="form-control input-sm" ng-model="uu.email">
+            <input id="email" type="email" class="form-control input-sm" ng-model="uu.user.email">
         </div>
     </div>
     <div class="col-sm-4">
         <div class="form-group">
             <label for="phone" class="control-label">Phone</label>
-            <input id="phone" type="tel" class="form-control input-sm" ng-model="uu.phone">
+            <input id="phone" type="tel" class="form-control input-sm" ng-model="uu.user.phone">
         </div>
     </div>
 </div>
@@ -34,7 +34,7 @@
         <div class="col-sm-12">
             <div class="form-group">
                 <label for="contactaddress1" class="control-label">Address (Line 1)</label>
-                <input id="contactaddress1" type="text" class="form-control input-sm" ng-model="uu.address1">
+                <input id="contactaddress1" type="text" class="form-control input-sm" ng-model="uu.user.address1">
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
         <div class="col-sm-12">
             <div class="form-group">
                 <label for="contactaddress2" class="control-label">Address (Line 2)</label>
-                <input id="contactaddress2" type="text" class="form-control input-sm" ng-model="uu.address2">
+                <input id="contactaddress2" type="text" class="form-control input-sm" ng-model="uu.user.address2">
             </div>
         </div>
     </div>
@@ -52,21 +52,21 @@
         <div class="col-sm-4">
             <div class="form-group">
                 <label for="contactcity" class="control-label">City</label>
-                <input id="contactcity" type="text" class="form-control input-sm" ng-model="uu.city">
+                <input id="contactcity" type="text" class="form-control input-sm" ng-model="uu.user.city">
             </div>
         </div>
 
         <div class="col-sm-4">
             <div class="form-group">
                 <label for="contactprovince" class="control-label">Province</label>
-                <select id="contactprovince" class="form-control input-sm" ng-model="uu.province" ng-options="key as value for (key, value) in uu.project.provs"></select>
+                <select id="contactprovince" class="form-control input-sm" ng-model="uu.user.province" ng-options="key as value for (key, value) in uu.user.project.provs"></select>
             </div>
         </div>
 
         <div class="col-sm-4">
             <div class="form-group">
                 <label for="contactpostal" class="control-label">Postal</label>
-                <input id="contactpostal" type="text" class="form-control input-sm" ng-model="uu.postal">
+                <input id="contactpostal" type="text" class="form-control input-sm" ng-model="uu.user.postalCode">
             </div>
         </div>
     </div>
