--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -7,6 +7,8 @@
 			<td title="'Name'"     filter="{'name':'text'}"     sortable="'name'"   >{{o.name}}</td>
 			<td title="'Type'"     filter="{'type':'text'}"     sortable="'type'"   >{{o.type}}</td>
 			<td title="'Region'"   filter="{'region':'text'}"   sortable="'sector'" >{{o.region}}</td>
+			<td title="'Phase'"    filter="{'currentPhase.name':'text'}"   sortable="'sector'" >{{o.currentPhase.name}}</td>
+			<td title="'Status'"    filter="{'status':'text'}"   sortable="'sector'" >{{o.status}}</td>
 		</tr>
 	</table>
 
