Redoing layout of front-page, hiding menu if the user isn't logged in, making the Activity list scrollable and rewording the "Current Projects" heading

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1390,3 +1390,8 @@ table thead tr.ng-table-filters {
   border-top: 1px solid #000;
   margin-bottom: 10px;
 }
+
+.activity-list-med {
+	max-height: 540px;
+	overflow-y: auto;
+}
