--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -1,6 +1,6 @@
 <section class='panel panel-default'>
 	<div class="block-content">
-		<h3>Current Projects</h3>
+		<h3>Environmental Assessments</h3>
 	</div>
 	<table ng-table="projectList.tableParams" class="table table-condensed table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
